# nlbot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PROJECT_MAP.md  README.md  backtest.py  daily_backtest.py  donchian_monthly.py  download_data.py  optimize.py  package.json  pnpm-lock.yaml  pyproject.toml  run_bot.py  strategy_matrix.py
docs/: BOT_FIX_GUARDRAILS.md  BOT_RUNTIME_HARDENING_CHECKLIST.md
tests/: test_bot_passive_history.py  test_broker_method_support.py  test_config_limits.py  test_config_resolution.py  test_g2_strategy.py  test_ig_config_and_broker.py  test_ig_position_updates.py  test_ig_proxy.py  test_ig_rate_limits.py  test_ig_streaming.py  test_momentum_strategy.py  test_multi_strategy.py  test_numeric.py  test_position_book.py  test_risk_manager.py  test_run_bot_alerts.py  test_run_bot_cli.py  test_state_recovery.py  test_state_store.py  test_strategy_aliases.py  test_strategy_profiles.py  test_strategy_schedule.py  test_tolerances.py  test_trend_following_strategy.py  test_worker_exit_logic.py  test_xtb_execution_status.py
xtb_bot/: __init__.py  bot.py  broker_method_support.py  cli.py  client.py  config.py  ig_auth_mixin.py  ig_client.py  ig_epic_mixin.py  ig_proxy.py  ig_rate_limit_mixin.py  ig_stream_mixin.py  models.py  multi_strategy.py  numeric.py  pip_size.py  position_book.py  rate_limited_proxy.py  risk_manager.py  state_store.py  strategy_profiles.py  symbols.py  time_utils.py  tolerances.py  worker.py
xtb_bot/bot/: __init__.py  core.py  (+16 more)
xtb_trading_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+53 files in other folders)
