[project]
name = "xtb-trading-bot"
version = "0.1.0"
description = "Multi-threaded IG/XTB trading bot with strategy and mode switching"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26.0",
  "lightstreamer-client-lib>=1.0.3",
  "websocket-client>=1.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
xtb-bot = "xtb_bot.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["xtb_bot", "xtb_bot.strategies"]
